--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,4 +1,83 @@
 {% extends "index.html" %}
 {% block content %}
-<p>Hello</p>
+  <!-- Main Content -->
+  <div class="container mt-5" style="max-width: 500px;">
+    <div class="card">
+      <div class="card-header text-center">
+        Details and Marks
+      </div>
+      <div class="card-body">
+        <form method="post" action="/edit">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Username" value="{{session['username']}}">
+              </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" id="email" name="email" placeholder="Enter email" value="{{session['email']}}">
+          </div>
+          <div class="form-group">
+            <label for="sub1">Subject 1</label>
+            <input type="text" class="form-control" id="sub1" name="sub1" placeholder="Subject 1" value="{% if 'sub1' in session %}{{ session['sub1'] }}{% endif %}">
+          </div>
+          <div class="form-group">
+            <label for="password">Subject 2</label>
+            <input type="text" class="form-control" id="sub2" name="sub2" placeholder="Subject 2" value="{% if 'sub2' in session %}{{ session['sub2'] }}{% endif %}">
+          </div>
+          <div class="form-group">
+            <label for="password">Subject 3</label>
+            <input type="text" class="form-control" id="sub3" name="sub3" placeholder="Subject 3" value="{% if 'sub3' in session %}{{ session['sub3'] }}{% endif %}">
+          </div>
+          <button type="submit" class="btn bg-dark text-white">Edit / Update</button>
+
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center mt-5">
+    <!-- Table to display job vacancies -->
+    <div class="col-md-8">
+      <table class="table table-bordered">
+        <thead class="table-light text-center">
+          <tr>
+            <th scope="col" style="width: 100px;">Subject 1</th>
+            <th scope="col" style="width: 200px;">Subject 2</th>
+            <th scope="col" style="width: 200px;">Subject 3</th>
+          </tr>
+        </thead>
+        <tbody id="vacancyTableBody" class="table-dark text-center">
+          <!-- Placeholder rows for job vacancies -->
+          <tr>
+            <td style="width: 150px;">{% if 'sub1' in session %}{{ session['sub1'] }}{% endif %}</td>
+            <td style="width: 150px;">{% if 'sub2' in session %}{{ session['sub2'] }}{% endif %}</td>
+            <td style="width: 150px;">{% if 'sub3' in session %}{{ session['sub3'] }}{% endif %}</td>
+          </tr>
+          <!-- Add more rows as needed -->
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row justify-content-center mt-5">
+    <!-- Table to display job vacancies -->
+    <div class="col-md-8">
+      <table class="table table-bordered">
+        <thead class="table-light text-center">
+          <tr>
+            <th scope="col" style="width: 100px;">Average: 
+                {% if 'sub1' in session and 'sub2' in session and 'sub3' in session %}
+                  {% set sub1_int = session['sub1'] | int %}
+                  {% set sub2_int = session['sub2'] | int %}
+                  {% set sub3_int = session['sub3'] | int %}
+                  {% set total = sub1_int + sub2_int + sub3_int %}
+                  {% set average = total / 3 %}
+                  {{ average }}
+                {% endif %}
+              </th>
+              
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </div>
+
 {%  endblock %}"
