--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
           <button type="submit" class="btn bg-dark text-white">Register</button>
           {% if reg %}
             <div class="form-group mt-3 text-center">
-                <label for="error" style="color: greenyellow;">You have successfully registered. Now you can sign in.</label>
+                <label for="error" style="color: rgb(17, 145, 17);">You have successfully registered. Now you can <a href="{{url_for('signin')}}">Sign in</a>.</label>
             </div>
           {% endif %}
         </form>
