--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
               </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="Enter email" value="{{session['email']}}">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" value="{{session['email']}}">
           </div>
           <div class="form-group">
             <label for="sub1">Subject 1</label>
