--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="Enter email">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
           </div>
           <div class="form-group">
             <label for="password">Password</label>
