--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,7 +10,7 @@
         <form method="post" action="/signin">
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="Enter email">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
           </div>
           <div class="form-group">
             <label for="password">Password</label>
