--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,13 @@
             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
           </div>
           <div class="form-group">
+            <label for="role">Role</label>
+            <select class="form-control form-select" id="role" name="role" aria-label="Select Your Role">
+              <option selected>Student</option>
+              <option value="Company">Company</option>
+            </select>
+          </div>
+          <div class="form-group">
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
           </div>
