--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,12 @@
                   Profile <i class="fas fa-caret-down"></i>
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{{url_for('profile',id=session['id'])}}">View Profile</a>
+                {% if session['role'] == 'Company' %}
+                <a class="dropdown-item" href="{{url_for('comprofile', id=session['id'])}}">View Profile</a>
+                {% else %}
+                <a class="dropdown-item" href="{{url_for('profile', id=session['id'])}}">View Profile</a>
+            {% endif %}
+            
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{{url_for('signout')}}">Signout</a>
               </div>
