--- a/templates/signin.html
+++ b/templates/signin.html
@@ -9,6 +9,13 @@
       <div class="card-body">
         <form method="post" action="/signin">
           <div class="form-group">
+            <label for="role">Role</label>
+            <select class="form-control form-select" id="role" name="role" aria-label="Select Your Role">
+              <option selected>Student</option>
+              <option value="Company">Company</option>
+            </select>
+          </div>
+          <div class="form-group">
             <label for="email">Email</label>
             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
           </div>
