--- a/templates/comprofile.html
+++ b/templates/comprofile.html
@@ -4,7 +4,7 @@
   <div class="container mt-5" style="max-width: 500px;">
     <div class="card">
       <div class="card-header text-center">
-        Details and Marks
+        Details
       </div>
       <div class="card-body">
         <form method="post" class="border p-4" action="/compedit" style="background-color: rgba(251, 251, 190, 0.529);">
@@ -22,7 +22,21 @@
       </div>
     </div>
   </div>
-  
+  <div class="card-body">
+    <form method="post" class="border p-4" action="{{ url_for('create_job') }}" style="background-color: rgba(127, 230, 96, 0);">
+        <div class="form-group">
+            <label for="job_title">Internship Title</label>
+            <input type="text" class="form-control" id="job_title" name="job_title" placeholder="Internship Title">
+          </div>
+      <div class="form-group">
+        <label for="email">Description</label>
+        <textarea class="form-control" id="job_description" name="job_description" placeholder="Job Description"></textarea>
+      </div>
+      <button type="submit" class="btn bg-dark text-white">Add</button>
+
+    </form>
+  </div>
+
   <div class="row justify-content-center mt-5">
     <!-- Table to display job vacancies -->
     <div class="col-md-8">
@@ -36,10 +50,15 @@
         <tbody id="vacancyTableBody" class="table-dark text-center">
           <!-- Placeholder rows for subject marks -->
           <tr>
-            <!-- <td style="width: 150px;">{% if 'sub1' in session %}{{ session['sub1'] }}{% endif %}</td>
-            <td style="width: 150px;">{% if 'sub2' in session %}{{ session['sub2'] }}{% endif %}</td>
-            <td style="width: 150px;">{% if 'sub3' in session %}{{ session['sub3'] }}{% endif %}</td> -->
+            <td style="width: 150px;"></td>
+            <td style="width: 150px;"></td>
           </tr>
+          {% for job in session['jobs'] %}
+                <tr>
+                    <td style="width: 150px;">{{ job[0] }}</td>
+                    <td style="width: 150px;">{{ job[1] }}</td>
+                </tr>
+          {% endfor %}
           <!-- Add more rows as needed -->
         </tbody>
       </table>
