--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <title>Simple Bootstrap Page</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 <body>
@@ -35,7 +36,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Profile <i class="fas fa-caret-down"></i>
+                  Profile 
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 {% if session['role'] == 'Company' %}
