--- a/templates/comprofile.html
+++ b/templates/comprofile.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="card-body">
-    <form method="post" class="border p-4" action="{{ url_for('create_job') }}" style="background-color: rgba(127, 230, 96, 0);">
+    <form method="post" class="border p-4" action="{{ url_for('create_job') }}" style="background-color: rgb(255, 255, 255);border-radius: 10px;">
         <div class="form-group">
             <label for="job_title">Internship Title</label>
             <input type="text" class="form-control" id="job_title" name="job_title" placeholder="Internship Title">
@@ -39,27 +39,27 @@
 
   <div class="row justify-content-center mt-5">
     <!-- Table to display job vacancies -->
-    <div class="col-md-8">
+    <div class="col-md-11">
       <table class="table table-bordered">
         <thead class="table-light text-center">
             <tr>
-                <th scope="col" style="width: 100px;">Internship Title</th>
+                <th scope="col" style="width: 200px;">Internship Title</th>
                 <th scope="col" style="width: 200px;">Description</th>
-                <th scope="col" style="width: 50px;">Edit</th>
-                <th scope="col" style="width: 50px;">Delete</th>
+                <th scope="col" style="width: 15px;">Edit</th>
+                <th scope="col" style="width: 15px;">Delete</th>
             </tr>
         </thead>
         <tbody id="vacancyTableBody" class="table-dark text-center">
             {% for job in session['jobs'] %}
             <tr>
               <form action="{{ url_for('editjob', job_id=job[0]) }}" method="post">
-              <td style="width: 150px;">
-                <input class="bg-dark text-white" type="text" name="title_of" value="{{ job[1] }} ">
+              <td style="padding-right: 0px;padding-left: 0px;">
+                <input class="bg-dark text-white" type="text" name="title_of" style="width: 250px;" value="{{job[1]}}">
               </td>
-              <td style="width: 300px;">
+              <td>
                 <textarea class="bg-dark text-white" name="description_of" style="width: 100%; resize: both;">{{ job[2] }}</textarea>
               </td>
-                <td style="width: 100px;">
+                <td style="width: 15px;">
                     <div class="d-flex justify-content-center">
                         
                             <button type="submit" name="editJob" class="btn btn-primary mx-1">
@@ -68,7 +68,7 @@
                         
                 </td>
               </form>
-                <td style="width: 100px;">
+                <td style="width: 15px;">
                         
                         <form action="{{ url_for('deletejob', job_id=job[0]) }}" method="post">
                             <button type="submit" name="deleteJob" class="btn btn-danger mx-1">
