--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,8 @@
                 <a class="dropdown-item" href="{{url_for('comprofile', id=session['id'])}}">View Profile</a>
                 {% else %}
                 <a class="dropdown-item" href="{{url_for('profile', id=session['id'])}}">View Profile</a>
-            {% endif %}
+                <a class="dropdown-item" href="{{url_for('internships')}}">Internships</a>
+                {% endif %}
             
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{{url_for('signout')}}">Signout</a>
