--- a/templates/requests.html
+++ b/templates/requests.html
@@ -23,7 +23,7 @@
                 {{ req[3] }}
               </td>
               <td>
-                <a href="{{req[1]}}">{{req[1]}}</a>
+                <a href="mailto:{{req[1]}}">{{req[1]}}</a>
               </td>
               <td>
                 {% if req[2] %}
