--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
   <!-- Header -->
   <header class="bg-dark text-white py-3">
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">Internship Finding System</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
